--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ html{
 .Logo{
   font-size: 35px;
   font-weight: 700;
+  color: var(--_primary-color);
+  text-decoration: none;
 }
 #header{
   padding-top: 0.5%;
@@ -70,7 +72,9 @@ html{
 .navigation-text{
   padding-left: 20px;
   font-weight: 400;
-  
+  color: var(--_primary-color);
+  text-decoration: none;
+  font-size: 25px;
 }
 .heading{
   font-size: 40px;
