--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,12 @@ html{
   color: var(--_primary-color);
   text-decoration: none;
 }
+.Logo:hover{
+  color: #fe7aba;
+}
+.Logo:active{
+  color: #f71683;
+}
 #header{
   padding-top: 0.5%;
   padding-bottom: 0.5%;
@@ -75,6 +81,12 @@ html{
   color: var(--_primary-color);
   text-decoration: none;
   font-size: 25px;
+}
+.navigation-text:hover{
+  color: #fe7aba;
+}
+.navigation-text:active{
+  color: #f71683;
 }
 .heading{
   font-size: 40px;
@@ -117,6 +129,10 @@ font-size: 20px;
     cursor: pointer;
    
 }
+.button:hover{
+  background-color: var(--3primary-color);
+  transform: scale(1.1);
+}
 .services{
   text-align:center;
   padding-top: 2%;
@@ -133,6 +149,24 @@ font-size: 20px;
   background-position: center;
   background-size: cover;
   width: 30%;
+}
+#img1:hover{
+  transform: scale(1.1);
+}
+#img2:hover{
+  transform: scale(1.1);
+}
+#img3:hover{
+  transform: scale(1.1);
+}
+.imgdoctor:hover{
+  transform: scale(1,1);
+  box-shadow: var(--1primary-color);
+  
+}
+.button-doctor:hover{
+  transform: scale(1.1);
+  box-shadow: var(--1primary-color);
 }
 #img2{
   box-shadow: var(--1primary-color);
